<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoIrc5_Control_v_1_x_x" Id="{96f9f606-cede-444d-b6e8-91d0339d4204}">
    <Declaration><![CDATA[TYPE TcoIrc5_Control_v_1_x_x : 
STRUCT	

	{attribute addProperty Name "<#Interuption actually running instruction#>"}
	Interupt : BOOL;

	{attribute addProperty Name "<#Load program#>"}
	LoadProg : BOOL;	

	{attribute addProperty Name "<#Load and run program#>"}
	LoadAndStartProg : BOOL;

	{attribute addProperty Name "<#Switch off the motors#>"}
	MotorOff : BOOL;	

	{attribute addProperty Name "<#Switch on the motors#>"}
	MotorOn : BOOL;	

	{attribute addProperty Name "<#Switch on the motors and start program#>"}
	MotorOnAndStart : BOOL; 

	{attribute addProperty Name "<#Emergency stop acknowledge#>"}
	ResetEmgStop : BOOL;

	{attribute addProperty Name "<#Error acknowledge#>"}
	ResetError : BOOL; 

	{attribute addProperty Name "<#Program start#>"}
	StartProgram : BOOL;	

	{attribute addProperty Name "<#Program start at main#>"}
	StartMain : BOOL; 	

	{attribute addProperty Name "<#Program stop#>"}
	StopProgram : BOOL;	

	{attribute addProperty Name "<#Stop movement-quick#>"}
	QuickStop : BOOL; 

	{attribute addProperty Name "<#Stop movement-soft#>"}
	SoftStop : BOOL;	

	{attribute addProperty Name "<#Stop program at the end of the cycle#>"}
	StopCycle : BOOL; 	

	{attribute addProperty Name "<#Stop program at the end of the instruction#>"}
	StopInstruction : BOOL;

	{attribute addProperty Name "<#Speed limitation#>"}
	LimitSpeed : BOOL;

	{attribute addProperty Name "<#Enable movement to area 1#>"}
	Enable2Area_1 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 2#>"}
	Enable2Area_2 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 3#>"}
	Enable2Area_3 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 4#>"}
	Enable2Area_4 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 5#>"}
	Enable2Area_5 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 6#>"}
	Enable2Area_6 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 7#>"}
	Enable2Area_7 : BOOL;

	{attribute addProperty Name "<#Enable movement to area 8#>"}
	Enable2Area_8 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 1#>"}
	ContinueFromArea_1 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 2#>"}
	ContinueFromArea_2 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 3#>"}
	ContinueFromArea_3 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 4#>"}
	ContinueFromArea_4 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 5#>"}
	ContinueFromArea_5 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 6#>"}
	ContinueFromArea_6 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 7#>"}
	ContinueFromArea_7 : BOOL;

	{attribute addProperty Name "<#Enable movement out off area 8#>"}
	ContinueFromArea_8 : BOOL;

	{attribute addProperty Name "<#Tool 1 retract#>"}
	Tool_1_Retract : BOOL;

	{attribute addProperty Name "<#Tool 1 extend#>"}
	Tool_1_Extend : BOOL;

	{attribute addProperty Name "<#Tool 2 retract#>"}
	Tool_2_Retract : BOOL;

	{attribute addProperty Name "<#Tool 2 extend#>"}
	Tool_2_Extend : BOOL;

	{attribute addProperty Name "<#Tool 3 retract#>"}
	Tool_3_Retract : BOOL;

	{attribute addProperty Name "<#Tool 3 extend#>"}
	Tool_3_Extend : BOOL;

	{attribute addProperty Name "<#Tool 4 retract#>"}
	Tool_4_Retract : BOOL;

	{attribute addProperty Name "<#Tool 4 extend#>"}
	Tool_4_Extend : BOOL;

	{attribute addProperty Name "<#Tool 5 retract#>"}
	Tool_5_Retract : BOOL;

	{attribute addProperty Name "<#Tool 5 extend#>"}
	Tool_5_Extend : BOOL;

	{attribute addProperty Name "<#Tool 6 retract#>"}
	Tool_6_Retract : BOOL;

	{attribute addProperty Name "<#Tool 6 extend#>"}
	Tool_6_Extend : BOOL;

	{attribute addProperty Name "<#Tool 7 retract#>"}
	Tool_7_Retract : BOOL;

	{attribute addProperty Name "<#Tool 7 extend#>"}
	Tool_7_Extend : BOOL;

	{attribute addProperty Name "<#Tool 8 retract#>"}
	Tool_8_Retract : BOOL;

	{attribute addProperty Name "<#Tool 8 extend#>"}
	Tool_8_Extend : BOOL;

	{attribute addProperty Name "<#Action number#>"}
	ActionNo : BYTE; 

	{attribute addProperty Name "<#Global robot speed#>"}
	GlobalSpeed : BYTE; 

	{attribute addProperty Name "<#Tool number#>"}
	ToolNo : BYTE; 	

	{attribute addProperty Name "<#Workobject number#>"}
	WorkobjectNo : BYTE; 

	{attribute addProperty Name "<#Point number#>"}
	PointNo : BYTE; 		

	{attribute addProperty Name "<#User specific speed 1#>"}
	UserSpecSpeed1 : UINT; 

	{attribute addProperty Name "<#User specific speed 2#>"}
	UserSpecSpeed2 : UINT; 

	{attribute  addProperty Name "<#Coordinates#>"}     
	Coordinates : TcoAbstractions.TcoRoboticsCoordinates; 		
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>