<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoIrc5_Status_v_1_x_x" Id="{0610eeb6-af1c-48db-b044-7dd087fec511}">
    <Declaration><![CDATA[TYPE TcoIrc5_Status_v_1_x_x :
STRUCT
	ActionDescription : STRING(100);	
	State:TcoIrc5_State_v_1_x_x;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>